Native/Test/KL/integer-constants.out
integer-constants.kl:4:3: error: unary operator '-' not supported for expressions of type 'Size'
