Native/Test/KL/integer-constants.kl
function entry()
{
  report (Integer)2147483647;
  report (Integer)-2147483648;
}
